--- a/public/system-integration.html
+++ b/public/system-integration.html
@@ -2,87 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Micro Automation Services - System Integration</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            line-height: 1.6;
-            color: #333;
-            background: linear-gradient(to bottom, #f8f8f8, #ffffff);
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 10px;
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        header {
-            background: linear-gradient(to bottom, #007bff, #ffffff);
-            color: #fff;
-            padding: 2rem 0;
-            text-align: center;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        section {
-            padding: 2rem 0;
-        }
-
-        footer {
-            background: linear-gradient(to bottom, #ffffff, #007bff);
-            color: #fff;
-            text-align: center;
-            padding: 1rem 0;
-            position: relative;
-            width: 100%;
-            margin-top: 2rem;
-        }
-
-        html, body {
-            height: 100%;
-        }
-    </style>
+    <style>      /* Font & Base */      body {        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;        margin: 0;        line-height: 1.6;        background: linear-gradient(135deg, #e0f7fa, #ffffff);        color: #333;        overflow-x: hidden;        animation: fadeIn 1.5s ease-in;      }      h1, h2, h3 {        font-weight: bold;        color: #222;      }      p {        color: #444;      }      @keyframes fadeIn {        0% { opacity: 0; transform: translateY(-10px); }        100% { opacity: 1; transform: translateY(0); }      }      @keyframes scaleUp {        from { transform: scale(0.95); opacity: 0; }        to { transform: scale(1); opacity: 1; }      }      header {        background: linear-gradient(135deg, #00bcd4, #3f51b5);        color: #fff;        padding: 3rem 0;        text-align: center;        transition: background 0.5s ease;        animation: fadeIn 1.2s ease-in-out;      }      header h1 {        font-size: 3em;        margin: 0 0 0.5em;      }      .container {        max-width: 1200px;        margin: 0 auto;        padding: 0 20px;      }      section {        padding: 3rem 0;        animation: fadeIn 1s ease-in-out;      }      .services {        display: flex;        justify-content: space-around;        flex-wrap: wrap;        gap: 20px;      }      .service {        width: 300px;        background: linear-gradient(to bottom, #ffffff, #e0f7fa);        margin-bottom: 20px;        padding: 20px;        border-radius: 12px;        text-align: center;        text-decoration: none;        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);        transition: transform 0.3s ease, box-shadow 0.3s ease;        animation: scaleUp 0.5s ease forwards;      }      .service:hover {        transform: scale(1.05);        background: linear-gradient(to bottom, #00c6ff, #0072ff);        color: #fff;        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2);      }      .service img {        max-width: 80px;        height: auto;        margin-bottom: 15px;      }      .service h3 {        font-size: 1.5em;        margin-bottom: 10px;      }      .service p {        font-size: 1em;      }      footer {        background: linear-gradient(to right, #3f51b5, #00bcd4);        color: #fff;        text-align: center;        padding: 1rem 0;        margin-top: 2rem;        animation: fadeIn 1.2s ease-in;      }      #contact p, #about p {        font-size: 1.1em;        animation: fadeIn 1.5s ease;      }      @media (max-width: 768px) {        .services {          flex-direction: column;          align-items: center;        }        .service {          width: 90%;        }        header h1 {          font-size: 2.5em;        }      }    </style>
 </head>
 <body>
 
     <header>
         <div class="container">
-            <h1 style="font-weight: bold;">KarvaDo</h1>
-            <p>System Integration - Micro Automation Services for Streamlined Efficiency</p>
+            <h1>KarvaDo</h1>
+            <p>System Integration Services</p>
         </div>
     </header>
 
     <section id="service-details">
         <div class="container">
             <h2>System Integration</h2>
-            <p>Connect disparate systems to share data and automate processes across different platforms.</p>
-            
+            <p>Streamline your business by connecting disparate systems to share data and automate processes across different platforms. Our solutions ensure seamless communication and efficiency.</p>
+            <ul>
+                <li>Connect various software applications and databases.</li>
+                <li>Automate data synchronization between systems.</li>
+                <li>Improve data accuracy and reduce manual errors.</li>
+            </ul>
+            <p>Ready to integrate your systems? Contact us today!</p>
         </div>
     </section>
 
     <section id="contact">
         <div class="container">
             <h2>Contact Us</h2>
-            <p>Get in touch to discuss your automation needs and how we can help your business.</p>
-            <p>Email: info@yourcompany.com</p>
-            <p>Phone: (123) 456-7890</p>
+            <p>Reach out to us to discuss how our system integration services can benefit your business.</p>
+            <p>Email: info@yourcompany.com</p>          <p>Phone: (123) 456-7890</p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 karvaDo. All rights reserved.</p>
+            <p>&copy; 2024 KarvaDo. All rights reserved.</p>
         </div>
     </footer>
 
