--- a/public/workflow-optimization.html
+++ b/public/workflow-optimization.html
@@ -105,6 +105,15 @@
       </p>
     </div>
   </section>
+  <button id="tryNowButton" style="display: block; width: 200px; padding: 10px; margin: 20px auto; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer;">Try Now</button>
+  <div id="output" style="white-space: pre-wrap; margin-top: 30px; text-align: center;"></div>
+
+  <script>
+    document.getElementById('tryNowButton').addEventListener('click', function() {
+      document.getElementById('output').textContent = 'Running script...';
+      fetch('/workflow_optimization.py').then(response => response.text()).then(output => document.getElementById('output').textContent = output).catch(error => document.getElementById('output').textContent = 'An error occurred.');
+    });
+  </script>
 
   <section id="contact">
     <div class="container">
