--- a/public/index.html
+++ b/public/index.html
@@ -153,22 +153,22 @@
       <h2>Our Services</h2>
       <div class="services">
         <a href="task-automation.html" class="service">
-          <img src="assets/placeholder.png" alt="Task Automation">
+          <img src="assets/task.png" alt="Task Automation">
           <h3>Task Automation</h3>
           <p>Automate repetitive tasks, such as data entry, file processing, and report generation.</p>
         </a>
         <a href="workflow-optimization.html" class="service">
-          <img src="assets/placeholder.png" alt="Workflow Optimization">
+          <img src="assets/workflow.png" alt="Workflow Optimization">
           <h3>Workflow Optimization</h3>
           <p>Streamline your workflows by automating processes that involve multiple steps and approvals.</p>
         </a>
         <a href="system-integration.html" class="service">
-          <img src="assets/placeholder.png" alt="System Integration">
+          <img src="assets/system.png" alt="System Integration">
           <h3>System Integration</h3>
           <p>Connect disparate systems to share data and automate processes across different platforms.</p>
         </a>
         <a href="custom-scripting.html" class="service">
-          <img src="assets/placeholder.png" alt="Custom Scripting">
+          <img src="assets/custom.png" alt="Custom Scripting">
           <h3>Custom Scripting</h3>
           <p>Develop custom scripts to automate specific tasks or processes that require unique solutions.</p>
         </a>
@@ -178,7 +178,7 @@
           <p>Implement monitoring tools to track the performance of automated processes and identify areas for improvement.</p>
         </a>
         <a href="automation-consulting.html" class="service">
-          <img src="assets/placeholder.png" alt="Automation Consulting">
+          <img src="assets/consulting.png" alt="Automation Consulting">
           <h3>Automation Consulting</h3>
           <p>Receive expert guidance on identifying automation opportunities and implementing effective solutions.</p>
         </a>
